[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-pipeline-transform"
version = "1.0.19"
description = "Transform library for GCP data pipelines (dbt macros)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dbt-bigquery>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.yml"]
